--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -3,6 +3,7 @@
 
 name: Node.js CI
 
+
 on:
   push:
     branches: [ master ]
@@ -14,18 +15,15 @@ jobs:
 
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        node-version: [10.x, 12.x]
-
     steps:
     - uses: actions/checkout@v2
-    - name: Use Node.js ${{ matrix.node-version }}
+    - name: Use Node.js
       uses: actions/setup-node@v1
       with:
-        node-version: ${{ matrix.node-version }}
-    - run: npm ci
+        node-version: '13.12.0'
+    - run: npm install
     - run: npm run build --if-present
     - run: npm test
       env:
         CI: true
+
