--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -22,7 +22,7 @@ jobs:
       with:
         node-version: '13.12.0'
     - run: npm install
-    - run: npm run build --if-present
+    - run: CI=false npm run build --if-present
     - run: npm test
       env:
         CI: false
