adeded anim to intro

--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
     "materialize-social": "^1.0.3",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "react-reveal": "^1.2.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0"
   },
   "scripts": {
-    
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
