--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -23,6 +23,7 @@ jobs:
         node-version: '13.12.0'
     - run: npm install
     - run: CI=false npm run build --if-present
+    - run: npm run test
 
       env:
         CI: false
