--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-dom": "^16.13.0",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.0"
+    "react-scripts": "3.4.0",
+    "react-vertical-timeline-component": "^2.5.0"
   },
   "scripts": {
     "predeploy": "npm run build",
