--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -27,4 +27,19 @@ jobs:
 
       env:
         CI: false
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v2
+    - name: Use Node.js
+        uses: actions/setup-node@v1
+        with:
+          node-version: '13.12.0'
+    - run: npm install
+    - run: CI=false npm run build 
+    - run: npm run deploy 
+
+  
 
