--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -39,7 +39,7 @@ jobs:
         node-version: '13.12.0'
     - run: npm install
     - run: CI=false npm run build 
-    - run: npm run deploy 
+    - run: CI=false npm run deploy 
 
   
 
