--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "materialize-social": "^1.0.3",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "react-lazyload": "^3.2.0",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
