--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://bharath5324.github.io/IEEE-REACT/",
+  "homepage": "https://test.ieeemec.org",
   "name": "ieee",
   "version": "0.1.0",
   "private": true,
