--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -33,6 +33,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - name: Set Git user
+      run: |
+        git config user.email "riaelisabeths@gmail.com"
+        git config user.name "milkbreadzee"
     - name: Use Node.js
       uses: actions/setup-node@v1
       with:
