--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -35,8 +35,14 @@ jobs:
     - uses: actions/checkout@v2
     - name: Set Git user
       run: |
-        git config --global user.email "riaelisabeths@gmail.com"
-        git config --global user.name "milkbreadzee"
+        git config --global user.name $user_name
+        git config --global user.email $user_email
+        git remote set-url origin https://${github_token}@github.com/${repository}
+      env:
+        user_name: 'github-actions[bot]'
+        user_email: 'github-actions[bot]@users.noreply.github.com'
+        github_token: ${{ secrets.TOKEN }}
+        repository: ${{ github.repository }}
     - name: Use Node.js
       uses: actions/setup-node@v1
       with:
