Changed Hash Router

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://test.ieeemec.org",
+  "homepage": "https://ieeemec.in/",
   "name": "ieee",
   "version": "0.1.0",
   "private": true,
