Revert "Changed Hash Router" This reverts commit 402c63915b3ec7b68cfdeb3596ed082119367dec.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://ieeemec.in/",
+  "homepage": "https://test.ieeemec.org",
   "name": "ieee",
   "version": "0.1.0",
   "private": true,
